--- a/www/index.html
+++ b/www/index.html
@@ -16,11 +16,13 @@
         });
 
         function main() {
-            
-            var msg = "Hello, JavaScript!";
-            msg += <br>;
-            msg += "This is Monaca";
-            $("#disp1").html(msg);
+
+            var a = 0;
+            var txt = "";
+            txt += "a: "+a + "<br>";
+           
+            $("#disp1").html("Hello, JavaScript!<br>This is Monaca.");
+            $("#disp2").html(txt);
             $("#disp1").css("font-size","x-large");
             $("#disp1").css("font-family","fantasy");
             $("#disp1").css("background-color","lightgray");
