--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,12 @@
             var a = 0;
             var txt = "";
             txt += "a: "+a + "<br>";
+            if(a == 1){
+                txt += "TRUE<br>";
+            }else{
+                txt += "FALSE<br>";
+            }
+            txt += "a: "+a + "<br>";
            
             $("#disp1").html("Hello, JavaScript!<br>This is Monaca.");
             $("#disp2").html(txt);
